# indexer

./: Cargo.toml  Rocket.toml
.github/workflows/: release.yml
example/: .index.tmpl.html  README.md  nginx.conf  site.css  start.sh
example/.templates/: index.html  layout.html
src/: as_byte_filter.rs  entry.rs  etag_rejectable.rs  listing.rs  main.rs  template.html  thumbnail.rs
templates/: dirent.html
