[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "^1.0.93"
askama = { version = "0.12.1", features = ["with-hyper"] }
askama_hyper = "0.1.0"
form_urlencoded = "^1.2.1"
http-body-util = "^0.1.2"
hyper = { version = "^1.5.0", features = ["http1", "server"] }
hyper-util = { version = "^0.1.10", features = ["tokio"] }
image = "^0.25.5"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "^0.1.16", features = ["net"] }

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1
