[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "^1.0.93"
byte-unit = "5.1.6"
etag = { version = "4.0.0", features = ["std"] }
form_urlencoded = "^1.2.1"
http-body-util = "^0.1.2"
hyper = { version = "^1.5.0", features = ["http1", "server"] }
hyper-util = { version = "^0.1.10", features = ["tokio"] }
image = "^0.25.5"
serde = { version = "^1.0.215", features = ["derive"] }
tera = "1.20.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "^0.1.16", features = ["net"] }
walkdir = "2.5.0"

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1
